# Paperify

./: requirements.txt
.github/workflows/: build.yml
Paperify/: main.py  main.spec  prog  progress.csv  pyproject.toml  try.csv
