[project]
name = "paperify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arabic-reshaper>=3.0.0",
    "matplotlib>=3.10.8",
    "pyinstaller>=6.17.0",
    "pyside6>=6.10.1",
    "python-bidi>=0.6.7",
    "reportlab>=4.4.7",
]
